--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@ body {
 
 .biodata .name {
     font-size: 20px;
-    color: #F7EEDD;
+    color: #0C0C0C;
     font-weight: 500;
 }
 
 .biodata .school {
     font-size: 15px;
-    color: #F7EEDD;
+    color: #0C0C0C;
     font-weight: 400;
 }
 
